--- a/src/parser/sample.fxml
+++ b/src/parser/sample.fxml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parser.Controller">
    <center>
       <Pane fx:id="canvas" BorderPane.alignment="CENTER">
          <children>
-            <Ellipse fx:id="turtleImage" fill="DODGERBLUE" layoutX="309.0" layoutY="215.0" radiusX="7.0" radiusY="4.0" stroke="BLACK" strokeType="INSIDE" />
+            <ImageView fx:id="turtleImage" fitHeight="12.0" fitWidth="11.0" layoutX="304.0" layoutY="205.0" rotate="90.0">
+               <image>
+                  <Image url="@di07G.png" />
+               </image>
+            </ImageView>
          </children></Pane>
    </center>
    <left>
