--- a/src/parser/MainUi.fxml
+++ b/src/parser/MainUi.fxml
@@ -83,7 +83,20 @@
                                     <Insets left="20.0" right="20.0" />
                                  </padding>
                               </Label>
-                              <ColorPicker fx:id="lineColorPicker" />
+                              <ColorPicker fx:id="lineColorPicker" onAction="#changeColor" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                           <children>
+                              <Label text="Turtle Size">
+                                 <padding>
+                                    <Insets right="10.0" />
+                                 </padding>
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <Slider fx:id="turtleScale" majorTickUnit="0.1" max="1.0" minorTickCount="0" onDragDetected="#changeTurtleScale" prefHeight="14.0" prefWidth="308.0" snapToTicks="true" value="0.5" />
                            </children>
                         </HBox>
                      </children>
