--- a/src/parser/MainUi.fxml
+++ b/src/parser/MainUi.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -48,7 +48,7 @@
                <content>
                   <HBox>
                      <children>
-                        <VBox alignment="TOP_CENTER">
+                        <VBox alignment="CENTER">
                            <children>
                               <Button mnemonicParsing="false" onAction="#runScript" text="Run">
                                  <VBox.margin>
@@ -97,6 +97,32 @@
                                  </HBox.margin>
                               </Label>
                               <Slider fx:id="turtleScale" majorTickUnit="0.1" max="1.0" minorTickCount="0" onDragDetected="#changeTurtleScale" prefHeight="14.0" prefWidth="308.0" snapToTicks="true" value="0.5" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Label text="Button Distance">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <Slider blockIncrement="1.0" majorTickUnit="5.0" minorTickCount="1" snapToTicks="true" value="10.0">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </HBox.margin>
+                              </Slider>
+                              <Label text="10">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <children>
+                              <Label text="Button Rotation" />
+                              <Slider blockIncrement="15.0" majorTickUnit="45.0" max="360.0" minorTickCount="15" snapToTicks="true" value="45.0" />
+                              <Label text="10" />
                            </children>
                         </HBox>
                      </children>
