--- a/src/parser/MainUi.fxml
+++ b/src/parser/MainUi.fxml
@@ -106,23 +106,22 @@
                                     <Insets left="10.0" right="10.0" />
                                  </HBox.margin>
                               </Label>
-                              <Slider blockIncrement="1.0" majorTickUnit="5.0" minorTickCount="1" snapToTicks="true" value="10.0">
+                              <Slider fx:id="buttonDistance" blockIncrement="1.0" majorTickUnit="5.0" minorTickCount="1" snapToTicks="true" value="10.0">
                                  <HBox.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </HBox.margin>
                               </Slider>
-                              <Label text="10">
-                                 <HBox.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </HBox.margin>
-                              </Label>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
                               <Label text="Button Rotation" />
-                              <Slider blockIncrement="15.0" majorTickUnit="45.0" max="360.0" minorTickCount="15" snapToTicks="true" value="45.0" />
-                              <Label text="10" />
+                              <Slider fx:id="buttonRotation" blockIncrement="15.0" majorTickUnit="45.0" max="360.0" minorTickCount="15" snapToTicks="true" value="45.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#resetDefaultSettings" text="Reset Defaults" />
                            </children>
                         </HBox>
                      </children>
@@ -137,10 +136,10 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Open File" />
-                  <MenuItem mnemonicParsing="false" text="Save File" />
+              <MenuItem mnemonicParsing="false" onAction="#readFromFile" text="Open File" />
+                  <MenuItem mnemonicParsing="false" onAction="#saveToFile" text="Save File" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Export to Image" />
+                  <MenuItem mnemonicParsing="false" onAction="#saveToImage" text="Export to Image" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
