--- a/src/parser/MainUi.fxml
+++ b/src/parser/MainUi.fxml
@@ -151,7 +151,7 @@
                   <MenuItem mnemonicParsing="false" onAction="#saveToImage" text="Export to Image" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
+          <Menu mnemonicParsing="false" onAction="#showHelp" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
             </items>
